# add_subdirectory(parser)
add_subdirectory(kv)
# add_subdirectory(master)
# add_subdirectory(guid)
# add_subdirectory(util)
# add_subdirectory(raft)
# add_subdirectory(client)
add_subdirectory(mvcc)
add_subdirectory(prefix_tree)
add_subdirectory(wal)
add_subdirectory(storage)
add_subdirectory(move)
add_subdirectory(info_collector)
