file(GLOB TEST_KV_SRCS "test_*.cc")
foreach(KV_T ${TEST_KV_SRCS})
    get_filename_component(KV_T_WE ${KV_T} NAME_WE)
    add_executable(${KV_T_WE} ${KV_T})
    add_dependencies(${KV_T_WE} third)
    target_link_libraries("${KV_T_WE}" kv gtest_main braft)
    add_test(NAME "${KV_T_WE}" COMMAND "${KV_T_WE}")
endforeach()
