file(GLOB TEST_PARSER_SRCS "test_*.cc")
foreach(PARSER_T ${TEST_PARSER_SRCS})
    get_filename_component(PARSER_T_WE ${PARSER_T} NAME_WE)
    add_executable(${PARSER_T_WE} ${PARSER_T})
    add_dependencies(${PARSER_T_WE} third)
    target_link_libraries("${PARSER_T_WE}" parser proto protobuf gtest_main)
    add_test(NAME "${PARSER_T_WE}" COMMAND "${PARSER_T_WE}")
endforeach()
