file(GLOB TEST_MASTER_SRCS "test_*.cc")
foreach(MASTER_T ${TEST_MASTER_SRCS})
  get_filename_component(MASTER_T_WE ${MASTER_T} NAME_WE)
  add_executable(${MASTER_T_WE} ${MASTER_T})
  target_link_libraries("${MASTER_T_WE}" fs_service heart_beat_sender master client gtest_main proto protobuf gtc gtg)
  add_test(NAME "${MASTER_T_WE}" COMMAND "${MASTER_T_WE}")
endforeach()
