file(GLOB TEST_MOVE_SRCS "test_*.cc")
foreach(MOVE_T ${TEST_MOVE_SRCS})
    get_filename_component(MOVE_T_WE ${MOVE_T} NAME_WE)
    add_executable(${MOVE_T_WE} ${MOVE_T})
    target_link_libraries("${MOVE_T_WE}" server_for_test_move rpc gtest_main)
    add_test(NAME "${MOVE_T_WE}" COMMAND "${MOVE_T_WE}")
endforeach()
